# exot_app_unx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
generators/: generator_cache_evict_st.cpp  generator_cache_maurice_mt.cpp  generator_cache_read_st.cpp  generator_cache_write_st.cpp  generator_inactive_mt.cpp  generator_rdseed_mt.cpp  generator_utilisation_ffb_conservative.cpp  generator_utilisation_mt.cpp  generator_utilisation_ut.cpp
meters/: meter_cache_er.cpp  meter_cache_ff.cpp  meter_cache_fp.cpp  meter_cache_fr.cpp  meter_cache_l1.cpp  meter_cache_ristenpart.cpp  meter_fan_procfs.cpp  meter_fan_sysfs.cpp  meter_frequency_rel.cpp  meter_frequency_sysfs.cpp  meter_miedl-meter.cpp  meter_power_msr.cpp  meter_rdseed_status.cpp  meter_rdseed_timing.cpp  meter_thermal_msr+fan_procfs.cpp  meter_thermal_msr+fan_sysfs.cpp  meter_thermal_msr+power_msr+frequency_sysfs.cpp  meter_thermal_msr+power_msr.cpp  meter_thermal_msr.cpp  meter_thermal_sysfs+frequency_sysfs.cpp  meter_thermal_sysfs.cpp  meter_utilisation_procfs.cpp
scripts/: bootstrap-builds.sh  build-scratch.sh  build-target.sh  docker-build.sh  pack-for-distribution.sh
utilities/: utility_cache_hist.cpp  utility_inhibitor.cpp
